Remove dependency on reflections library